@@ -171,14 +171,15 @@ extern char *grub_scratch_mem;
 #define SECTOR_BITS		9
 #define BIOS_FLAG_FIXED_DISK	0x80
 
-#define BOOTSEC_LOCATION     RAW_ADDR (0x7C00)
-#define BOOTSEC_SIGNATURE    0xAA55
-#define BOOTSEC_BPB_OFFSET   0x3
-#define BOOTSEC_BPB_LENGTH   0x3B
-#define BOOTSEC_PART_OFFSET  0x1BE
-#define BOOTSEC_PART_LENGTH  0x40
-#define BOOTSEC_SIG_OFFSET   0x1FE
-#define BOOTSEC_LISTSIZE     8
+#define BOOTSEC_LOCATION		RAW_ADDR (0x7C00)
+#define BOOTSEC_SIGNATURE		0xAA55
+#define BOOTSEC_BPB_OFFSET		0x3
+#define BOOTSEC_BPB_LENGTH		0x3B
+#define BOOTSEC_BPB_HIDDEN_SECTORS	0x1C
+#define BOOTSEC_PART_OFFSET		0x1BE
+#define BOOTSEC_PART_LENGTH		0x40
+#define BOOTSEC_SIG_OFFSET		0x1FE
+#define BOOTSEC_LISTSIZE		8
 
 /* Not bad, perhaps.  */
 #define NETWORK_DRIVE	0x20
